tring to fix z-index on cards for iOS...

--- a/styles.css
+++ b/styles.css
@@ -168,6 +168,8 @@ html {
   border-radius: 10px;
   height: 180px;
   width: 120px;
+  position: relative;
+  z-index: -1;
   transform: rotate3d(1, 1, 1, -2deg);
 }
 .game-card-bank {
